2024-07-10T00:44:52Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9866272216 # 352
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-07-10
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 842 1317 / 844 1319
* notice: next accum: outdated-unq outdated-all / unq all: 843 1318 / 844 1319
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-06-26] / []

2024-07-04T00:43:54Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9786679342 # 346
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-07-04
* notice: last 14d: unq all: 1 2
* notice: prev accum: outdated-unq outdated-all / unq all: 841 1316 / 844 1319
* notice: next accum: outdated-unq outdated-all / unq all: 842 1317 / 844 1319
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-06-20] / []

2024-07-03T00:43:39Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9769980300 # 345
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-07-03
* notice: last 14d: unq all: 2 3
* notice: prev accum: outdated-unq outdated-all / unq all: 840 1315 / 844 1319
* notice: next accum: outdated-unq outdated-all / unq all: 841 1316 / 844 1319
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-06-19] / []

2024-07-02T00:43:47Z: