@@ -1,3 +1,12 @@
+2024-07-30T00:45:19Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10154130747 # 372
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-07-30
+* notice: last 14d: unq all: 1 1
+* notice: prev accum: outdated-unq outdated-all / unq all: 843 1318 / 844 1319
+* notice: next accum: outdated-unq outdated-all / unq all: 844 1319 / 845 1320
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2024-06-27] / [2024-07-29]
+
 2024-07-10T00:44:52Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9866272216 # 352
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-07-10
